[project]
name = "neollm-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Rikuyaya",email = "rikuyaya15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "neollm @ git+ssh://git@github.com/neoAI-inc/neo-llm-module.git"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
